# dicechess-analytics

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  build.sbt  docker-compose.yaml  lefthook.yml  main.py  mise.toml  mkdocs.yml  pyproject.toml  ruff.toml  sonar-project.properties
.gemini/: styleguide.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: backend-ci.yaml  ci.yml  deploy-api.yaml  deploy-docs.yaml
.mise/tasks/: smoke-test
.mise/tasks/staging/: deploy
alembic/: env.py
alembic/versions/: 27b92188f593_initial_schema.py  2e2c01130a68_add_time_and_stake_columns.py  3aeab26594dc_add_unique_constraints_to_turns_and_.py  7c01e8a99836_initial_schema.py  9c353f11669d_add_event_type_enum.py  af29eb457ede_add_player_ratings_to_games.py  c4795187dba5_add_pg_trgm_and_gin_index_to_players.py
backend/: .scalafmt.conf  Dockerfile  README.md  build.sbt
backend/project/: plugins.sbt
backend/src/main/resources/: logback.xml
docs/: api_specification.md  architecture.md  astro.config.mjs  code_reference.md  development.md  index.md  milestones.md  package-lock.json  package.json
docs/src/content/docs/: api-specification.md  (+7 more)
frontend-pwa/: .npmrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend-pwa/src/: App.svelte
project/: plugins.sbt
src/: config.py  database.py  importer.py  models.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routers/: __init__.py  games.py  players.py
(+81 files in other folders)
