[project]
name = "dicechess-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
    "xxhash>=3.7.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]
docs = [
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.4",
]
